terraform_webserver.tf
resource "azurerm_public_ip" "webserverpublicip" {
    name                         = "webserverpublicip"
    location                     = "eastus"
    resource_group_name          = azurerm_resource_group.somildebate1_id.name
    allocation_method            = "Dynamic"

    tags = {
        environment = "somildebate1"
    }
}

resource "azurerm_network_interface" "webserver_nic_id" {
    name                        = "webserver_nic"
    location                    = "eastus"
    resource_group_name         = azurerm_resource_group.somildebate1_id.name

    ip_configuration {
        name                          = "myNicConfiguration"
        subnet_id                     = azurerm_subnet.somildebate1_pubsubnet_id.id
        private_ip_address_allocation = "Static"
        private_ip_address          = "10.0.0.4"
        public_ip_address_id          = azurerm_public_ip.webserverpublicip.id
    }

    tags = {
        environment = "somildebate1"
    }
}

# Connect the security group to the network interface
resource "azurerm_network_interface_security_group_association" "webserver" {
    network_interface_id      = azurerm_network_interface.webserver_nic_id.id
    network_security_group_id = azurerm_network_security_group.somildebate1_pub_nsg_id.id

}

resource "random_id" "randomId" {
    keepers = {
        # Generate a new ID only when a new resource group is defined
        resource_group = azurerm_resource_group.somildebate1_id.name
    }
    
    byte_length = 8
}
resource "azurerm_storage_account" "webserver_storage" {
    name                        = "diag${random_id.somildebate1_id.randomId.hex}"
    resource_group_name         = azurerm_resource_group.somildebate1_id.name
    location                    = "eastus"
    account_replication_type    = "LRS"
    account_tier                = "Standard"

    tags = {
        environment = "somildebate1"
    }

}

resource "azurerm_linux_virtual_machine" "webserver" {
    name                  = "webserver"
    location              = "eastus"
    resource_group_name   = azurerm_resource_group.somildebate1_id.name
    network_interface_ids = [azurerm_network_interface.webserver_nic_id.id]
    size                  = "Standard_DS1_v2"

    os_disk {
        name              = "webserverOsDisk"
        caching           = "ReadWrite"
        storage_account_type = "Premium_LRS"
    }

    source_image_reference {
        publisher = "Canonical"
        offer     = "UbuntuServer"
        sku       = "16.04.0-LTS"
        version   = "latest"
    }

    computer_name  = "webserver"
    admin_username = "azureuser"
    admin_password = "azureuser123!"
    disable_password_authentication = false
        
    boot_diagnostics {
        storage_account_uri = azurerm_storage_account.webserver_storage.primary_blob_endpoint
    }

    tags = {
        environment = "somildebate1"
    }
}
